--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
-    <h1>Interactive Media 1 (2410)</h1>
-    <h2>Interactive Media</h2>
+    <h1>Interactive Media</h1>
+    <a href="week2/index.html">go to week 2</a>
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
     <h2>Email: rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h2>
     <ul>
