--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
   <body>
     <h1>Interactive Media</h1>
     <a href="week2/index.html">go to week 2</a>
+    <img src="dog.webp" alt="this is a dog" />
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
     <h2>Email: rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h2>
-    <ul>
+
+    <table>
+      <tr>
+        <td>Group1</td>
+        <td>Group2</td>
+      </tr>
+      <tr>
+        <td>Group1</td>
+        <td>Group2</td>
+      </tr>
+    </table>
+
+    <ol>
       <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
       <li>Group 3: Every Thursday (09:30 am - 12:30 pm)</li>
       <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
-    </ul>
+    </ol>
 
     <h3>Venue: 09.02.20 (Tuesday) & 09.02.19 (Thursday)</h3>
     <p>
