--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   </head>
   <body>
     <h1>Interactive Media</h1>
+    <!-- this is a title -->
+    <!-- this is a comment -->
+    <!--
+      ---------------------------------------
+      The logic for this page:
+      in this page i put all the comments
+      ----------------------------------------
+    -->
     <a href="week2/index.html">go to week 2</a>
     <img src="dog.webp" alt="this is a dog" />
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
