Updated site for lesson

--- a/week2/index.html
+++ b/week2/index.html
@@ -6,7 +6,66 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Week2</p>
-    <a href="../index.html">return</a>
+    <h1>How i see a HTML structure for riotgames.com</h1>
+    <header>
+      <nav>
+        <ul>
+          <li>Logo</li>
+          <li>Who we are</li>
+          <li>Work with us</li>
+          <li>News</li>
+        </ul>
+      </nav>
+    </header>
+
+    <img href="background.jpg" alt="background image" />
+    <button type="button">Watch now</button>
+
+    <h1>Whats happening</h1>
+    <table>
+      <tr>
+        <td>
+          <img src="image.jpg" alt="topic image" />
+          <h2>Celebrating Ramadan in Wild Rift Together Under the Crescent</h2>
+          <p>Inside Riot</p>
+          <td>
+            <img src="image.jpg" alt="topic image" />
+            <h2>Everything you need to know: masters madrid</h2>
+            <p>News</p>
+          </td>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="image.jpg" alt="topic image" />
+          <h2>Everything under the crescent Event trailer</h2>
+          <p>News</p>
+        </td>
+      </tr>
+    </table>
+    <h1>Games</h1>
+    <table>
+      <tr>
+        <td>
+          <img src="image.jpg" alt="topic image" />
+          <img src="image.jpg" alt="topic image" />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="image.jpg" alt="topic image" />
+          <img src="image.jpg" alt="topic image" />
+        </td>
+      </tr>
+    </table>
+    <footer>
+      <a href="logolink"><img src="logo" alt="logo"></a>
+      <a href="link">Press</a>
+      <a href="link">Security</a>
+      <a href="link">Legal</a>
+      <a href="link">Leadership</a>
+      <a href="link">Candidate Privacy</a>
+      <a href="link">Terms of service</a>
+    </footer>
   </body>
 </html>
