--- a/week3/index.html
+++ b/week3/index.html
@@ -9,6 +9,7 @@
             color: aquamarine;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>This is CSS</h1>
