--- a/week3/index.html
+++ b/week3/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        h1 {
-            color: aquamarine;
-        }
-    </style>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <style></style>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 class="my-color">Interactive Media</h1>
+    <h2 id="instructor">
+      Instructor: Dr. Rohit Ashok Khot
+      <span data-email="email"
+        >Email: rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</span
+      >
+    </h2>
+    <ul>
+      <li>Group 1: Every Tuesday (09:30am - 12:30 pm)</li>
+      <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
+      <li>Group 3: EveryThursday (09:30 am - 12:30 pm)</li>
+      <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
+    </ul>
+    <h2 class="my-color">Venue: 09.02.20 (Tuesday) & 09.02.19 (Thursday)</h2>
+
+    <p>
+      Welcome to Interactive Media 1! Interactive Media 1 is about enabling you
+      to engage with the fundamentals of interaction design through the use of
+      web programming. Our focus will be on building up from the basic
+      principles of programming, covering the standard web languages - HTML, CSS
+      and JavaScript, in order to be able to select and use appropriate
+      programming languages, together with core concepts of interaction design,
+      in service of your broader digital design goals.
+    </p>
+
+    <p class="my-color" id="lastcolor">
+      Course-Specific Learning Outcomes: Upon completion of this course, you
+      will have a comprehensive understanding of the key concepts of
+      interactivity, user experience design, and information architecture in
+      web-based environments. You will also be able to identify and utilize the
+      appropriate technologies to address interactive design challenges.
+      Furthermore, you will have the skills to analyze user needs, organize
+      information, and create effective navigation strategies. Additionally, you
+      will be proficient in controlling the visual aspects of typography, color,
+      and layouts through scripting languages and coding, ensuring compatibility
+      across multiple platforms. Lastly, you will be able to critically evaluate
+      web projects based on user-centered design principles.
+    </p>
+  </body>
 </html>
