--- a/week3/index.html
+++ b/week3/index.html
@@ -16,7 +16,7 @@
       >
     </h2>
     <ul>
-      <li>Group 1: Every Tuesday (09:30am - 12:30 pm)</li>
+      <li><strong>Group 1: Every Tuesday (09:30am - 12:30 pm)</strong></li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
       <li>Group 3: EveryThursday (09:30 am - 12:30 pm)</li>
       <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
