--- a/week3/index.html
+++ b/week3/index.html
@@ -7,6 +7,12 @@
     <style></style>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=Madimi+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1 class="my-color">Interactive Media</h1>
