testing css link colours

--- a/week3/index.html
+++ b/week3/index.html
@@ -16,6 +16,8 @@
   </head>
   <body>
     <h1 class="my-color">Interactive Media</h1>
+    <a href="#">Home</a>
+    <a href="#">About</a>
     <h2 id="instructor">
       Instructor: Dr. Rohit Ashok Khot
       <span data-email="email"
