--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>this is assignment1</h1>
+    <h1>Assignment 1</h1>
   </body>
 </html>
