CSS title colours and added some answers.

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -13,88 +13,110 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
+    <!--Navigation Bar-->
     <nav>
       <h1>Interactive Media.</h1>
     </nav>
 
-    <div class="column">
+    <!--Start of main content-->
+    <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="coral">
+          <!--Color for the titles-->
           What was the first thing you paid attention to when interacting with
           the experience?
         </h2>
         <p>
-          The first thing that caught my eye in this interactive experience is
-          the large, title that’s contrasting with the background of the
-          webpage.
+          The first thing I noticed in the website is the full sized, animated
+          loading screen with the text "LOADING" displayed in the center of the
+          page. Upon the loading of the page, the page transforms into a
+          colourful splash page with a large, contrasting title and a smaller
+          subtitle to draw the attention of the viewer.
         </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="purple">
           Spend two minutes with the experience and create a list of each of
           your discrete actions.
         </h2>
-        <p>Scrolling Clicking Watching/Reading</p>
+        <p>
+          The main interaction of the site is scrolling. The website prompts the
+          user to do that by making the elements on the site move as the viewer
+          scrolls. Other interactions on the site also includes clicking of
+          certain elements as some elements are deliberately clickable in order
+          to add more value to the site. There is also a fair bit of reading
+          involved as the site has lots of text content to back up the visuals.
+        </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="yellow">
           What part of the experience did you spend the most time engaging with?
         </h2>
         <p>
           At one point there was this large heart-shaped button that was
-          pulsating, prompting me to click on it. Upon clicking, more hearts
-          appeared on the page. I spent a good few minutes clicking to see if
-          there was a limit to the hearts.
+          pulsating, prompting me to take some form of action on it. So i
+          clicked on it. Upon clicking on it, more hearts appeared on the page.
+          I spent a good few minutes clicking in order to see if anything
+          special happens after a certain number of clicks or if there was any
+          restriction on the number of hearts.
         </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="green">
           What was the most common action in your two-minute interaction with
           the experience?
         </h2>
-        <p>Scrolling through the interactive experience.</p>
+        <p>
+          The most common action was scrolling. The animations and elements on
+          this webpage are all bounded together by scrolling. So most of this
+          webpage is just scrolling, watching change in content, and reading,
+          before resuming scrolling.
+        </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="blue">
           What is your impression of the intended primary goal of the
           interactive experience?
         </h2>
         <p>
-          I feel that it conveys the message very clearly and boldly. It
-          balances engagement, information, and fun.
+          This webpage conveys it's message of the importance and value of
+          janitors in our society very well. It is a noble message that is very
+          well delivered by the presentation of the webpage.
         </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="purple">
           How does the interactive experience communicate this primary goal?
         </h2>
         <p>
-          The interactive experience used scrolling animations to contain
-          information, and at the same time allow users time to read and
-          interact with each page’s contents.
+          The usage of bright, contrasting colours and large, bold fonts used
+          for the titles assisted greatly in understanding the intentions and
+          goals of this webpage. The description texts in the webpage is also
+          kept deliberately short and digestable for quick reading.
         </p>
       </div>
     </div>
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="yellow">
           What is your impression of how the experience should be interacted
           with over time? (For how long and how many different times)
         </h2>
@@ -108,7 +130,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="green">
           How does the interactive experience communicate how it should be
           interacted with over time?
         </h2>
@@ -122,7 +144,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="coral">
           What was the first thing you paid attention to when interacting with
           the experience?
         </h2>
@@ -136,7 +158,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="purple">
           What other media forms (digital or otherwise) does the experience
           reference?
         </h2>
@@ -149,7 +171,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="yellow">
           What does this reference/s communicate to you about how you should act
           when engaging with your research experience?
         </h2>
@@ -159,7 +181,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="green">
           What is the most frustrating part of the interaction to you and what
           makes that part frustrating?
         </h2>
@@ -169,7 +191,7 @@
 
     <div class="questions">
       <div class="content">
-        <h2>
+        <h2 class="blue">
           What is the most satisfying part of the interaction to you and what
           makes that part satisfying?
         </h2>
