--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -17,184 +17,198 @@
   <body>
     <!--Navigation Bar for title-->
     <nav>
-      <h1>Interactive Media.</h1>
+      <div class="navsection">
+        <!--Wrapper for navbar to hold title and subtitle-->
+        <h1>Interactive Media.</h1>
+        <p>
+          A case study of <strong>brooomstick.com</strong> by Christina Bertman
+        </p>
+      </div>
+
       <a href="#top">Return to top</a>
       <!--go back up to top of page-->
     </nav>
 
-    <!--Start of main content-->
-    <div class="content">
-      <h2 class="coral">
-        <!--Color for the titles-->
-        What was the first thing you paid attention to when interacting with the
-        experience?
-      </h2>
-      <p>
-        The first thing I noticed in the website is the full sized, animated
-        loading screen with the text "LOADING" displayed in the center of the
-        page. Upon the loading of the page, the page transforms into a colourful
-        splash page with a large, contrasting title and a smaller subtitle to
-        draw the attention of the viewer.
-      </p>
-    </div>
+    <div class="container">
+      <!--Container to hold all content, and to manipulate CSS for everything except navbar.-->
+      <div class="content">
+        <h2 class="coral">
+          <!--Color for the titles-->
+          What was the first thing you paid attention to when interacting with
+          the experience?
+        </h2>
+        <p>
+          The first thing I noticed in the website is the full sized, animated
+          loading screen with the text "LOADING" displayed in the center of the
+          page. Upon the loading of the page, the page transforms into a
+          colourful splash page with a large, contrasting title and a smaller
+          subtitle to draw the attention of the viewer.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="purple">
-        Spend two minutes with the experience and create a list of each of your
-        discrete actions.
-      </h2>
-      <p>
-        The main interaction of the site is scrolling. The website prompts the
-        user to do that by making the elements on the site move as the viewer
-        scrolls. Other interactions on the site also includes clicking of
-        certain elements as some elements are deliberately clickable in order to
-        add more value to the site. There is also a fair bit of reading involved
-        as the site has lots of text content to back up the visuals.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="purple">
+          Spend two minutes with the experience and create a list of each of
+          your discrete actions.
+        </h2>
+        <p>
+          The main interaction of the site is scrolling. The website prompts the
+          user to do that by making the elements on the site move as the viewer
+          scrolls. Other interactions on the site also includes clicking of
+          certain elements as some elements are deliberately clickable in order
+          to add more value to the site. There is also a fair bit of reading
+          involved as the site has lots of text content to back up the visuals.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="yellow">
-        What part of the experience did you spend the most time engaging with?
-      </h2>
-      <p>
-        At one point there was this large heart-shaped button that was
-        pulsating, prompting me to take some form of action on it. So i clicked
-        on it. Upon clicking on it, more hearts appeared on the page. I spent a
-        good few minutes clicking in order to see if anything special happens
-        after a certain number of clicks or if there was any restriction on the
-        number of hearts.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="yellow">
+          What part of the experience did you spend the most time engaging with?
+        </h2>
+        <p>
+          At one point there was this large heart-shaped button that was
+          pulsating, prompting me to take some form of action on it. So i
+          clicked on it. Upon clicking on it, more hearts appeared on the page.
+          I spent a good few minutes clicking in order to see if anything
+          special happens after a certain number of clicks or if there was any
+          restriction on the number of hearts.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="green">
-        What was the most common action in your two-minute interaction with the
-        experience?
-      </h2>
-      <p>
-        The most common action was scrolling. The animations and elements on
-        this webpage are all bounded together by scrolling. So most of this
-        webpage is just scrolling, watching change in content, and reading,
-        before resuming scrolling.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="green">
+          What was the most common action in your two-minute interaction with
+          the experience?
+        </h2>
+        <p>
+          The most common action was scrolling. The animations and elements on
+          this webpage are all bounded together by scrolling. So most of this
+          webpage is just scrolling, watching change in content, and reading,
+          before resuming scrolling.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="blue">
-        What is your impression of the intended primary goal of the interactive
-        experience?
-      </h2>
-      <p>
-        This webpage conveys it's message of the importance and value of
-        janitors in our society very well. It is a noble message that is very
-        well delivered by the presentation of the webpage.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="blue">
+          What is your impression of the intended primary goal of the
+          interactive experience?
+        </h2>
+        <p>
+          This webpage conveys it's message of the importance and value of
+          janitors in our society very well. It is a noble message that is very
+          well delivered by the presentation of the webpage.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="purple">
-        How does the interactive experience communicate this primary goal?
-      </h2>
-      <p>
-        The usage of bright, contrasting colours and large, bold fonts used for
-        the titles assisted greatly in understanding the intentions and goals of
-        this webpage. The description texts in the webpage is also kept
-        deliberately short and digestable for quick reading.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="purple">
+          How does the interactive experience communicate this primary goal?
+        </h2>
+        <p>
+          The usage of bright, contrasting colours and large, bold fonts used
+          for the titles assisted greatly in understanding the intentions and
+          goals of this webpage. The description texts in the webpage is also
+          kept deliberately short and digestable for quick reading.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="yellow">
-        What is your impression of how the experience should be interacted with
-        over time? (For how long and how many different times)
-      </h2>
-      <p>
-        I do like that that once the full context and message of the webpage is
-        understood in the first viewing, it adds to the experience of
-        understanding all the details, references, key historical events in
-        future interactions of the webpage. However, the novelty of the fancy
-        scrolling effects and clickable elements wears off quickly.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="yellow">
+          What is your impression of how the experience should be interacted
+          with over time? (For how long and how many different times)
+        </h2>
+        <p>
+          I do like that that once the full context and message of the webpage
+          is understood in the first viewing, it adds to the experience of
+          understanding all the details, references, key historical events in
+          future interactions of the webpage. However, the novelty of the fancy
+          scrolling effects and clickable elements wears off quickly.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="green">
-        How does the interactive experience communicate how it should be
-        interacted with over time?
-      </h2>
-      <p>
-        The elements in the page visually changes and moves around as the viewer
-        scrolls down, giving the viewers a visual prompt to how much more they
-        have to scroll to reach the next segment of the webpage. Once the viewer
-        reaches the intended segment, the moving elements stop moving and
-        textual content starts to appear, signalling to the viewer to stop
-        scrolling and read the content.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="green">
+          How does the interactive experience communicate how it should be
+          interacted with over time?
+        </h2>
+        <p>
+          The elements in the page visually changes and moves around as the
+          viewer scrolls down, giving the viewers a visual prompt to how much
+          more they have to scroll to reach the next segment of the webpage.
+          Once the viewer reaches the intended segment, the moving elements stop
+          moving and textual content starts to appear, signalling to the viewer
+          to stop scrolling and read the content.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="coral">
-        What was the first thing you paid attention to when interacting with the
-        experience?
-      </h2>
-      <p>
-        The first element that I discovered that can be interacted with in the
-        webpage would be the navigation elements on the top center of the page
-        when it's first loaded in. Although it provides a quick jump to each
-        section of the page, it's not very eye catching and gets overshadowed by
-        the other large, colourful elements. <br /><br />The first interaction
-        that caught by eye was the moving visual elements as I'm scrolling down
-        the page.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="coral">
+          What was the first thing you paid attention to when interacting with
+          the experience?
+        </h2>
+        <p>
+          The first element that I discovered that can be interacted with in the
+          webpage would be the navigation elements on the top center of the page
+          when it's first loaded in. Although it provides a quick jump to each
+          section of the page, it's not very eye catching and gets overshadowed
+          by the other large, colourful elements. <br /><br />The first
+          interaction that caught by eye was the moving visual elements as I'm
+          scrolling down the page.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="purple">
-        What other media forms (digital or otherwise) does the experience
-        reference?
-      </h2>
-      <p>
-        The webpage frequently uses clippings and snippets of traditional media
-        like newspapers, artwork, paper tearoffs to reinforce the site's
-        aesthetics and message. The webpage presents these media pieces in a fun
-        yet informative way.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="purple">
+          What other media forms (digital or otherwise) does the experience
+          reference?
+        </h2>
+        <p>
+          The webpage frequently uses clippings and snippets of traditional
+          media like newspapers, artwork, paper tearoffs to reinforce the site's
+          aesthetics and message. The webpage presents these media pieces in a
+          fun yet informative way.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="yellow">
-        What does this reference/s communicate to you about how you should act
-        when engaging with your research experience?
-      </h2>
-      <p>These references</p>
-    </div>
+      <div class="content">
+        <h2 class="yellow">
+          What does this reference/s communicate to you about how you should act
+          when engaging with your research experience?
+        </h2>
+        <p>These references</p>
+      </div>
 
-    <div class="content">
-      <h2 class="green">
-        What is the most frustrating part of the interaction to you and what
-        makes that part frustrating?
-      </h2>
-      <p>
-        The most frustrating part of the interaction is not knowing that the
-        webpage has reached it's end as there are no indicators other than the
-        credits. Because the end segment looks just like every other segment on
-        the webpage, I was left scrolling while anticipating more from the
-        webpage.
-      </p>
-    </div>
+      <div class="content">
+        <h2 class="green">
+          What is the most frustrating part of the interaction to you and what
+          makes that part frustrating?
+        </h2>
+        <p>
+          The most frustrating part of the interaction is not knowing that the
+          webpage has reached it's end as there are no indicators other than the
+          credits. Because the end segment looks just like every other segment
+          on the webpage, I was left scrolling while anticipating more from the
+          webpage.
+        </p>
+      </div>
 
-    <div class="content">
-      <h2 class="blue">
-        What is the most satisfying part of the interaction to you and what
-        makes that part satisfying?
-      </h2>
-      <p>
-        The most satisfying part of the interaction is the clickable heart. It's
-        satisfying because there is seemingly no limit to how many times you can
-        click the heart, it's a fun challenge to attempt to fill the screen with
-        the little hearts that pops out.
-      </p>
+      <div class="content">
+        <h2 class="blue">
+          What is the most satisfying part of the interaction to you and what
+          makes that part satisfying?
+        </h2>
+        <p>
+          The most satisfying part of the interaction is the clickable heart.
+          It's satisfying because there is seemingly no limit to how many times
+          you can click the heart, it's a fun challenge to attempt to fill the
+          screen with the little hearts that pops out.
+        </p>
+      </div>
+
+      <footer>
+        <!--Footer-->
+        <h4>Made with love by Chen Luohan</h4>
+      </footer>
     </div>
   </body>
 </html>
