--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -175,7 +175,13 @@
           What does this reference/s communicate to you about how you should act
           when engaging with your research experience?
         </h2>
-        <p>These references</p>
+        <p>
+          These references allow the viewers to browse the webpage as if they're
+          traditional media like newspaper and magazines; asking the viewers to
+          slow down and digest each piece of information presented on the
+          webpage as it could potentially be important as if it was a printed
+          article.
+        </p>
       </div>
 
       <div class="content">
