Added some comments

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -26,8 +26,13 @@
       </div>
 
       <a href="#top">Return to top</a>
-      <!--go back up to top of page-->
+      <!--Ease of access, one click to go back up to top of page-->
     </nav>
+
+    <!--------------------------------------------------------------------------------------
+      I have decided that a vertical, single column design would be best fitting for the questions and answers, 
+      as there are 13 questions and answers, it's hard to style equal, symmetrical columns for all of them.
+    ---------------------------------------------------------------------------------------->
 
     <div class="container">
       <!--Container to hold all content, and to manipulate CSS for everything except navbar.-->
