--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <!--Favicons! For extra...spice!-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
 
   <body>
