--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -26,7 +26,7 @@
         <!--Wrapper for navbar to hold title and subtitle-->
         <h1>Interactive Media.</h1>
         <p>
-          A case study of <strong>brooomstick.com</strong> by Christina Bertman
+          An analysis of <strong>brooomstick.com</strong> by Christina Bertman
         </p>
       </div>
 
