Added a question number

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -42,6 +42,7 @@
     <div class="container">
       <!--Container to hold all content, and to manipulate CSS for everything except navbar.-->
       <div class="content">
+        <h1 class="title">1</h1>
         <h2 class="coral">
           <!--Color for the titles-->
           What was the first thing you paid attention to when interacting with
