--- a/week4/boxmodel/index.html
+++ b/week4/boxmodel/index.html
@@ -18,19 +18,10 @@
   </head>
   <body>
     <div class="outer">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-        sapiente qui a eveniet repudiandae ducimus, aperiam et alias quidem est,
-        maiores, fugit saepe modi tenetur perspiciatis quod porro eum! Earum eum
-        quisquam commodi aperiam blanditiis dolore, reprehenderit nam
-        perspiciatis, porro officiis ipsum pariatur. Amet corrupti ad ratione
-        molestias deserunt dolores a, vero, vitae soluta delectus adipisci
-        consequuntur suscipit in fuga iure assumenda tempora voluptas. Nesciunt
-        officiis recusandae aperiam soluta placeat facilis sequi quos
-        perspiciatis autem molestias atque ullam quam impedit odio ipsum, sed
-        doloribus voluptatum rerum in ducimus totam quaerat? Neque dolorem, a at
-        tempore eligendi vitae cum quam commodi?
-      </p>
+      <div class="inner">
+        <p>I am not rohit</p>
+      </div>
+      <div class="inner"></div>
     </div>
   </body>
 </html>
