--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -58,6 +58,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">2</h1>
         <h2 class="purple">
           Spend two minutes with the experience and create a list of each of
           your discrete actions.
@@ -73,6 +74,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">3</h1>
         <h2 class="yellow">
           What part of the experience did you spend the most time engaging with?
         </h2>
@@ -87,6 +89,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">4</h1>
         <h2 class="green">
           What was the most common action in your two-minute interaction with
           the experience?
@@ -100,6 +103,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">5</h1>
         <h2 class="blue">
           What is your impression of the intended primary goal of the
           interactive experience?
@@ -112,6 +116,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">6</h1>
         <h2 class="purple">
           How does the interactive experience communicate this primary goal?
         </h2>
@@ -124,6 +129,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">7</h1>
         <h2 class="yellow">
           What is your impression of how the experience should be interacted
           with over time? (For how long and how many different times)
@@ -138,6 +144,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">8</h1>
         <h2 class="green">
           How does the interactive experience communicate how it should be
           interacted with over time?
@@ -153,6 +160,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">9</h1>
         <h2 class="coral">
           What was the first thing you paid attention to when interacting with
           the experience?
@@ -169,6 +177,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">10</h1>
         <h2 class="purple">
           What other media forms (digital or otherwise) does the experience
           reference?
@@ -182,6 +191,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">11</h1>
         <h2 class="yellow">
           What does this reference/s communicate to you about how you should act
           when engaging with your research experience?
@@ -196,6 +206,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">12</h1>
         <h2 class="green">
           What is the most frustrating part of the interaction to you and what
           makes that part frustrating?
@@ -210,6 +221,7 @@
       </div>
 
       <div class="content">
+        <h1 class="title">13</h1>
         <h2 class="blue">
           What is the most satisfying part of the interaction to you and what
           makes that part satisfying?
