--- a/week4/boxmodel/boxgrid.html
+++ b/week4/boxmodel/boxgrid.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,24 +10,18 @@
       href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Space+Grotesk&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
-    <div class="outer">
-      <div class="inner">
-        <p>hi World</a></p>
-      </div>
-      <div class="inner"></div>
-      <div class="inner"></div>
-      <div class="inner noshrink"></div>
-      <div class="inner"></div>
-      <div class="inner"></div>
-      <div class="inner"></div>
+    <div id="grid-container">
+      <div id="box1"></div>
+      <div id="box2"></div>
+      <div id="box3"></div>
+      <div id="box4"></div>
+      <div id="box5"></div>
+      <div id="box6"></div>
+      <div id="box7"></div>
     </div>
   </body>
 </html>
