--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -162,23 +162,6 @@
       <div class="content">
         <h1 class="title">9</h1>
         <h2 class="coral">
-          What was the first thing you paid attention to when interacting with
-          the experience?
-        </h2>
-        <p>
-          The first element that I discovered that can be interacted with in the
-          webpage would be the navigation elements on the top center of the page
-          when it's first loaded in. Although it provides a quick jump to each
-          section of the page, it's not very eye catching and gets overshadowed
-          by the other large, colourful elements. <br /><br />The first
-          interaction that caught by eye was the moving visual elements as I'm
-          scrolling down the page.
-        </p>
-      </div>
-
-      <div class="content">
-        <h1 class="title">10</h1>
-        <h2 class="purple">
           What other media forms (digital or otherwise) does the experience
           reference?
         </h2>
@@ -191,17 +174,33 @@
       </div>
 
       <div class="content">
-        <h1 class="title">11</h1>
-        <h2 class="yellow">
+        <h1 class="title">10</h1>
+        <h2 class="purple">
           What does this reference/s communicate to you about how you should act
           when engaging with your research experience?
         </h2>
         <p>
-          These references allow the viewers to browse the webpage as if they're
-          traditional media like newspaper and magazines; asking the viewers to
-          slow down and digest each piece of information presented on the
-          webpage as it could potentially be important as if it was a printed
-          article.
+          These references (newspaper clippings, magazine pages, etc) allow the
+          viewers to browse the webpage as if they're traditional media like
+          newspaper and magazines; asking the viewers to slow down and digest
+          each piece of information presented on the webpage as it could
+          potentially be important as if it was a printed article.
+        </p>
+      </div>
+
+      <div class="content">
+        <h1 class="title">11</h1>
+        <h2 class="yellow">
+          What does this reference/s communicate to you about how you should
+          feel when engaging with your research experience?
+        </h2>
+        <p>
+          These references (newspaper clippings, magazine pages, etc) are in a
+          sense more "official" as compared to text and pictures on a website,
+          so it appeals to the viewer's understanding and respect of printed
+          media as a source of news, information, etc. This sense of authority
+          from the references allows the viewers to take the information
+          communicated more seriously.
         </p>
       </div>
 
