--- a/week5/index.html
+++ b/week5/index.html
@@ -20,5 +20,10 @@
 </head>
 <body>
     <h1>JS Examples</h1>
+    <div class="outer">
+        <p>what is outside temperature?</p>
+        <input type="number" id="temperature" placeholder="enter temperature">
+        <button id="submit" onclick="checkWeather()">Submit</button>
+    </div>
 </body>
 </html>
