--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -15,64 +15,50 @@
     />
   </head>
   <body>
-    <!-- Header Section -->
-    <header>
-      <h1>InteractiveCrafts</h1>
-    </header>
-
     <!-- Navigation Section -->
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">Playlists</a></li>
-        <!-- Add or remove navigation items as needed -->
-      </ul>
+      <a href="#">Home</a>
+      <a href="#">Blog</a>
+      <header>
+        <h1>InteractiveCrafts</h1>
+      </header>
+      <a href="#">Videos</a>
+      <a href="#">Contact</a>
     </nav>
 
-    <!-- Main Content Section -->
-    <main class="container">
-      <!-- Media Player Section -->
-      <div class="media-player">
-        <video id="custom-video-player" controls>
-          <source
-            src="https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/miac.mp4"
-            type="video/mp4"
-          />
-        </video>
-        <div class="custom-controls">
-          <button id="play-pause-btn" onclick="togglePlayPause()">
-            <img
-              id="play-pause-img"
-              src="https://img.icons8.com/ios-glyphs/30/play--v1.png"
-              alt="Play Button"
-              width="24"
-              height="24"
-            />
-          </button>
-          <!-- add the missing buttons or functionality here -->
-          <div class="progress-bar">
-            <span id="progress-bar-fill"></span>
-          </div>
-        </div>
+    <div class="video-container">
+      <div class="title">
+        <h1>DIY: How to make handheld windmills:</h1>
       </div>
+      <video
+        src="https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/berry-bunch_handheld-windmill-fan.mp4"
+        controls
+        id="my-video"
+      ></video>
 
-      <!-- Additional Content Section -->
-      <section>
-        <h2>Additional Content</h2>
-        <p>This is where you can showcase any other relevant content.</p>
-        <!-- Add more content as needed -->
-      </section>
-    </main>
+      <div class="video-controls">
+        <button id="play-pause-button">
+          <img
+            id="play-pause-img"
+            src="https://img.icons8.com/ios-glyphs/30/play--v1.png"
+            alt="Play Button"
+            width="24"
+            height="24"
+          />
+        </button>
+        <button id="mute-unmute-button">
+          <img
+            id="mute-unmute-img"
+            src="https://img.icons8.com/ios-glyphs/30/high-volume--v2.png"
+            alt="mute Button"
+            width="24"
+            height="24"
+          />
+        </button>
+      </div>
+    </div>
 
     <!-- Footer Section -->
-    <footer>
-      <p>&copy; 2024 Media Player Website. All rights reserved.</p>
-      <a href="https://icons8.com/icon/59862/play">Play</a> icon by
-      <a href="https://icons8.com">Icons8</a>
-      <a href="https://icons8.com/icon/61012/pause">Pause</a> icon by
-      <a href="https://icons8.com">Icons8</a>
-    </footer>
+    <footer></footer>
   </body>
 </html>
