--- a/week8/index.html
+++ b/week8/index.html
@@ -17,7 +17,13 @@
   <body>
     <div class="outer">
       <section class="video-container">
-        <video src="stardust.mp4" controls id="my-video"></video>
+        <video
+          src="stardust.mp4"
+          height="380px"
+          width="240px"
+          controls
+          id="my-video"
+        ></video>
       </section>
 
       <section class="video-controls">
