update assignment 2 index

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -58,6 +58,18 @@
       </div>
     </div>
 
+    <div class="description">
+      <h1>
+        Welcome to Interactivecrafts.com, our talented artist shows us how to
+        create a handheld windmill using ready available materials! This will be
+        a project that is both fun for children and adults alike!
+      </h1>
+
+      <h2>Materials Needed</h2>
+      <p></p>
+      <button>Skip to timestamp</button>
+    </div>
+
     <!-- Footer Section -->
     <footer></footer>
   </body>
