Html and CSS done.

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -22,7 +22,7 @@
       <header>
         <h1>InteractiveCrafts</h1>
       </header>
-      <a href="#">Videos</a>
+      <a href="#">Watch</a>
       <a href="#">Contact</a>
     </nav>
 
@@ -58,19 +58,124 @@
       </div>
     </div>
 
-    <div class="description">
-      <h1>
+    <div class="heading">
+      <h2>
         Welcome to Interactivecrafts.com, our talented artist shows us how to
         create a handheld windmill using ready available materials! This will be
         a project that is both fun for children and adults alike!
-      </h1>
-
-      <h2>Materials Needed</h2>
-      <p></p>
-      <button>Skip to timestamp</button>
+      </h2>
     </div>
 
-    <!-- Footer Section -->
-    <footer></footer>
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Materials Needed</h1>
+          <ul>
+            <li>Sheet of foam</li>
+            <li>Scissor</li>
+            <li>Ruler</li>
+            <li>Pen</li>
+            <li>Straw</li>
+            <li>Pipe cleaners</li>
+          </ul>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Step 1</h1>
+          <p>
+            Draw and cut the foam sheet into a 12.5cm square, fold the paper
+            diagonally in both directions.
+          </p>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Step 2</h1>
+          <p>
+            Poke a hole through the middle of the foam sheet and create cuts
+            halfway from the end to the middle along the fold lines. Add 4 more
+            holes beside the cuts on the edges of the foam sheet.
+          </p>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Step 3</h1>
+          <p>
+            Fold the four ends of the foam sheet inwards so that the side holes
+            matches the center hole.
+          </p>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Step 5</h1>
+          <p>
+            Using the leftover pieces of foam sheets that was cut out, use a
+            circular object (We used a cover of a glue stick) and stamp an
+            impression, creating a circular cutout. Poke a hole through the
+            center of the circular cutout.
+          </p>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="row">
+        <div class="column">
+          <h1>Step 6</h1>
+          <p>
+            Wrap the pipe cleaner around the straw, leaving a small bit hanging
+            out. Slide a foam ring onto the pipe cleaner, push the windmill
+            through the pipe cleaner and cover the other end with a foam ring.
+            Cut off excess pipe cleaner and twist it around the front ring.
+          </p>
+        </div>
+        <div class="column2">
+          <button>Skip to timestamp</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="description">
+      <h1>And there you have it...</h1>
+      <p>
+        Congratulations! You've successfully made a handheld windmill! It might
+        not spin smoothly initially, however, with a little tweaking, it will
+        turn smoothly. Try making a few in different colours!
+      </p>
+    </div>
+
+    <footer>
+      <p>A Chen Luohan Site, Made with 10% sanity, 90% love.</p>
+    </footer>
   </body>
 </html>
